--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-flask
 pyTelegramBotAPI
-yt-dlp
+schedule==1.2.2
+hijri-converter
+playwright
+requests
+aiohttp
+beautifulsoup4
+openai
+pandas
+selenium
+telebot
+flask
